--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "@nuxt/test-utils": "3.20.1",
     "@nuxt/ui": "4.2.1",
     "eslint": "^9.39.1",
-    "nuxt": "^4.2.1",
+    "nuxt": "4.1.3",
     "tailwindcss": "^4.1.17",
-    "vite-plugin-checker": "^0.11.0",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
